--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>About Josh</h1>
+    <img src="banner.jpg">
+    <h1>About Me</h1>
 </body>
 </html>
