--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Josh's Website</title>
+    <title>Josh's Programing Portfolio</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my website!</p>
-    <p>Thanks for visiting. To learn more about me <a href="aboutme.html">click here</a></p>
+    <img src="banner.jpg">
+    <h1>Welcome to Josh's Programing Portfolio</h1>
+    <p>This is the portfolio webpage that I programmed in HTML and CSS.<br><br>
+    It has many of the programs I wrote in the course.</p>
+    <p>Click <a href="aboutme.html">here</a> to learn about me.</p>
 </body>
 </html>
