--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
 </head>
 <body>
     <img src="banner.jpg">
-    <h1>Welcome to Josh's Programing Portfolio</h1>
-    <p>This is the portfolio webpage that I programmed in HTML and CSS.<br><br>
-    It has many of the programs I wrote in the course.</p>
+
+    <table>
+        <thead>
+            <tr>
+                <th><img src="Home.png"></th>
+                <th><img src="Javascripts.png"></th>
+                <th><img src="Aboutme.png"></th>
+            </tr>
+        </thead>
+    </table>
+    <h1>Welcome to Josh's Programing Portfolio Website</h1>
+    <p>My name is Josh Kleinberg. This is the portfolio webpage that I programmed in HTML in the class CSC 106.
+    It has many of the programs I wrote in the course. It includes multiple pages including Home, Javascripts, and About Me pages.</p>
     <p>Click <a href="aboutme.html">here</a> to learn about me.</p>
 </body>
 </html>
