--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Josh's Programing Portfolio Home</title>
+    <title>Josh's About Me Page</title>
 </head>
 <body>
     <img src="banner.jpg">
@@ -17,8 +17,8 @@
             </tr>
         </thead>
     </table>
-    <h1>Welcome to Josh's Programing Portfolio Website</h1>
-    <p>My name is Josh Kleinberg. This is the portfolio webpage that I programmed in HTML in the class CSC 106.<br>
-    It has many of the programs I wrote in the course. It includes multiple pages including Home, Javascripts, and About Me pages.</p>
+    <h1>About Me</h1>
+    <p>My name is Josh Kleinberg. I am a current student at the University of Rhode Island, and I am majoring in computer science. 
+    I am a freshman, in my first semester of college. I enjoy things like playing sports, hanging out with friends and family, and playing video games.</p>
 </body>
 </html>
