--- a/javascripts.html
+++ b/javascripts.html
@@ -11,9 +11,9 @@
     <table>
         <thead>
             <tr>
-                <th><a href="index.html"></a><img src="Home.png"></th>
-                <th><a href="javascripts.html"></a><img src="Javascripts.png"></th>
-                <th><a href="about.html"></a><img src="Aboutme.png"></th>
+                <th><a href="index.html"><img src="Home.png"></a></th>
+                <th><a href="javascripts.html"><img src="Javascripts.png"></a></th>
+                <th><a href="about.html"><img src="Aboutme.png"></a></th>
             </tr>
         </thead>
     </table>
