--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <table>
         <thead>
             <tr>
-                <th align="center"><a href="index.html"><img src="Home.png"></a></th>
-                <th align="center"><a href="javascripts.html"><img src="Javascripts.png"></a></th>
-                <th align="center"><a href="about.html"><img src="Aboutme.png"></a></th>
+                <th><a href="index.html"><img src="Home.png"></a></th>
+                <th><a href="javascripts.html"><img src="Javascripts.png"></a></th>
+                <th><a href="about.html"><img src="Aboutme.png"></a></th>
             </tr>
         </thead>
     </table>
