--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
     </table>
     <h1>About Me</h1>
     <p>My name is Josh Kleinberg. I am a current student at the University of Rhode Island, and I am majoring in computer science. 
-    I am a freshman, in my first semester of college. I enjoy things like playing sports, hanging out with friends and family, and playing video games.</p>
+    I am a freshman, in my first semester of college.<br>
+    I enjoy things like playing sports, hanging out with friends and family, and playing video games.</p>
 </body>
 </html>
