--- a/about.html
+++ b/about.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josh's About Me Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <img src="banner.jpg">
+<body id="custom-background">
+    <img src="joshkleinberg.jpg">
 
-    <table>
+    <table width="1025px">
         <thead>
             <tr>
-                <th><a href="index.html"><img src="Home.png"></a></th>
-                <th><a href="javascripts.html"><img src="Javascripts.png"></a></th>
-                <th><a href="about.html"><img src="Aboutme.png"></a></th>
+                <td align="center"><a href="index.html"><img src="home.png"></a></td>
+                <td align="center"><a href="javascripts.html"><img src="javascripts.png"></a></td>
+                <td align="center"><a href="about.html"><img src="about.png"></a></td>
             </tr>
         </thead>
     </table>
     <h1>About Me</h1>
-    <p>My name is Josh Kleinberg. I am a current student at the University of Rhode Island, and I am majoring in computer science. 
-    I am a freshman, in my first semester of college.<br>
-    I enjoy things like playing sports, hanging out with friends and family, and playing video games.</p>
+    <p>My name is Josh Kleinberg. I am a current student at the University of Rhode Island, and I am majoring in computer science.<br> 
+    I am a freshman, in my first semester of college.
+    I enjoy things like playing sports, hanging out with friends and family, and playing video games.<br>
+    I also like to ski and go to the gym. I played baseball as a sport throughout high school, and it is my favorite sport. My favorite baseball team is the Yankees.</p>
+    <img id="friends-image"src="friends.jpg">
+    <img id="skiing-image"src="skiing.jpg">
+    <img id="baseball-image"src="baseball.jpg">
 </body>
 </html>
