--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josh's Programing Portfolio Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="banner.jpg">
+    <img src="joshkleinberg.jpg">
 
-    <table>
+    <table width="1025px">
         <thead>
             <tr>
-                <th><a href="index.html"><img src="Home.png"></a></th>
-                <th><a href="javascripts.html"><img src="Javascripts.png"></a></th>
-                <th><a href="about.html"><img src="Aboutme.png"></a></th>
+                <td align="center"><a href="index.html"><img src="home.png"></a></td>
+                <td align="center"><a href="javascripts.html"><img src="javascripts.png"></a></td>
+                <td align="center"><a href="about.html"><img src="about.png"></a></td>
             </tr>
         </thead>
     </table>
