--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body id="custom-background">
     <img src="joshkleinberg.jpg">
 
-    <table width="1025px">
+    <table id="buttons-table"width="1025px">
         <thead>
             <tr>
                 <td align="center"><a href="index.html"><img src="home.png"></a></td>
@@ -23,8 +23,14 @@
     I am a freshman, in my first semester of college.
     I enjoy things like playing sports, hanging out with friends and family, and playing video games.<br>
     I also like to ski and go to the gym. I played baseball as a sport throughout high school, and it is my favorite sport. My favorite baseball team is the Yankees.</p>
-    <img id="friends-image"src="friends.jpg">
-    <img id="skiing-image"src="skiing.jpg">
-    <img id="baseball-image"src="baseball.jpg">
+    <table width="1025px">
+        <thead>
+            <tr>
+                <td align="center"><img id="friends-image"src="friends.jpg"></td>
+                <td align="center"><img id="skiing-image"src="skiing.jpg"></td>
+                <td align="center"><img id="baseball-image"src="baseball.jpg"></td>
+            </tr>
+        </thead>
+    </table>
 </body>
 </html>
