--- a/javascripts.html
+++ b/javascripts.html
@@ -9,7 +9,7 @@
 <body>
     <img src="joshkleinberg.jpg">
 
-    <table width="1025px">
+    <table id="buttons-table"width="1025px">
         <thead>
             <tr>
                 <td align="center"><a href="index.html"><img src="home.png"></a></td>
