--- a/javascripts.html
+++ b/javascripts.html
@@ -20,8 +20,15 @@
     </table>
     <h1>Josh's Javascript Programs</h1>
     <p>This page of my website contains Javascripts that I have written in my CSC 160 course using tags learned in class and Khan Academy.</p>
-    <h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_bitmoji/4629679853846528">kleinberg_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_bitmoji/4629679853846528/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-    <h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_dancing_bitmoji/5462246219890688">kleinberg_dancing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_dancing_bitmoji/5462246219890688/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-    <h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_racing_bitmoji/4533110659923968">kleinberg_racing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_racing_bitmoji/4533110659923968/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+
+    <table width="1025px">
+        <thead>
+            <tr>
+                <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_bitmoji/4629679853846528">kleinberg_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_bitmoji/4629679853846528/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+                <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_dancing_bitmoji/5462246219890688">kleinberg_dancing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_dancing_bitmoji/5462246219890688/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+                <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_racing_bitmoji/4533110659923968">kleinberg_racing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_racing_bitmoji/4533110659923968/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+            </tr>
+        </thead>
+    </table>
 </body>
 </html>
