--- a/javascripts.html
+++ b/javascripts.html
@@ -27,7 +27,15 @@
                 <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_bitmoji/4629679853846528">kleinberg_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_bitmoji/4629679853846528/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
                 <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_dancing_bitmoji/5462246219890688">kleinberg_dancing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_dancing_bitmoji/5462246219890688/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
                 <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_racingbitmojifun/5541740037324800">kleinberg_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_racingbitmojifun/5541740037324800/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+            </tr>
+        </thead>
+    </table>
+    <table width="1025px">
+        <thead>
+            <tr>
                 <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_decision_tree/5235030038986752">kleinberg_decision_tree</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_decision_tree/5235030038986752/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></td>
+                <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_fortune/5754684647981056">kleinberg_fortune</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_fortune/5754684647981056/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+                <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_dancefloor/4524953766248448">kleinberg_dancefloor</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_dancefloor/4524953766248448/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
             </tr>
         </thead>
     </table>
