--- a/javascripts.html
+++ b/javascripts.html
@@ -39,5 +39,12 @@
             </tr>
         </thead>
     </table>
+    <table width="1025px">
+        <thead>
+            <tr>
+                <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_tag_game/6662481015259136">kleinberg_tag_game</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_tag_game/6662481015259136/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+            </tr>
+        </thead>
+    </table>
 </body>
 </html>
