--- a/javascripts.html
+++ b/javascripts.html
@@ -43,6 +43,8 @@
         <thead>
             <tr>
                 <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_tag_game/6662481015259136">kleinberg_tag_game</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_tag_game/6662481015259136/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+                <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_object/4834268664348672">kleinberg_object</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_object/4834268664348672/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+                <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_contacts/5139556839768064">kleinberg_contacts</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_contacts/5139556839768064/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
             </tr>
         </thead>
     </table>
