--- a/javascripts.html
+++ b/javascripts.html
@@ -48,5 +48,12 @@
             </tr>
         </thead>
     </table>
+    <table>
+        <thead>
+            <tr>
+                <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_molemash/4765467658731520">kleinberg_molemash</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_molemash/4765467658731520/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+            </tr>
+        </thead>
+    </table>
 </body>
 </html>
