--- a/javascripts.html
+++ b/javascripts.html
@@ -52,6 +52,7 @@
         <thead>
             <tr>
                 <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/kleinberg_molemash/4765467658731520">kleinberg_molemash</a></h2><script src="https://www.khanacademy.org/computer-programming/kleinberg_molemash/4765467658731520/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+                <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/spin-off-of-martinezkleinberg_memory/6551688345468928">"martinezKleinberg_memory"</a></h2><script src="https://www.khanacademy.org/computer-programming/spin-off-of-martinezkleinberg_memory/6551688345468928/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
             </tr>
         </thead>
     </table>
