--- a/final.html
+++ b/final.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Josh's Programing Portfolio Home</title>
+    <title>Josh's Final Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,9 +18,6 @@
                 <td align="center"><a href="final.html"><img src="about.png"></a></td>
             </tr>
         </thead>
-    </table>
-    <h1>Welcome to Josh's Programing Portfolio Website</h1>
-    <p>My name is Josh Kleinberg. This is the portfolio webpage that I programmed in HTML in the class CSC 106.<br>
-    It has many of the programs I wrote in the course. It includes multiple pages including Home, Javascripts, and About Me pages. It also includes a page that includes my final partner project in the class.</p>
+    </table> 
 </body>
 </html>
