--- a/final.html
+++ b/final.html
@@ -15,9 +15,21 @@
                 <td align="center"><a href="index.html"><img src="home.png"></a></td>
                 <td align="center"><a href="javascripts.html"><img src="javascripts.png"></a></td>
                 <td align="center"><a href="about.html"><img src="about.png"></a></td>
-                <td align="center"><a href="final.html"><img src="about.png"></a></td>
+                <td align="center"><a href="final.html"><img src="finalproject.png"></a></td>
             </tr>
         </thead>
     </table> 
+    <h1>CSC 106 Air Hockey Final Project</h1>
+    <p>For our final project, we chose to code air hockey. We have a one player option, and then instructions on how to play. You use the mousepad to control your paddle with your player inside of the paddle. 
+        You have three different levels that you can choose from. If you increase the level, the CPU gets faster and faster making it harder to win. If you get 7 goals, you win the game, and if the CPU gets 7 goals, you lose the game.
+    </p>
+    <table id="buttons-table"width="1025px">
+        <thead>
+            <tr>
+                <td align="center"><h2><a href="https://www.khanacademy.org/computer-programming/csc_106-final-kleinberg-project/5622023751647232">CSC_106 Final Kleinberg Project</a></h2><script src="https://www.khanacademy.org/computer-programming/csc_106-final-kleinberg-project/5622023751647232/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+                <td align="center"><a href="https://share.vidyard.com/watch/xTxdMDDXH5wedZq7wsi5S5?">Game Explanation</a></td>
+            </tr>
+        </thead>
+    </table>
 </body>
 </html>
